Fixed alignment issues in buildpage and create buildpage, description feature, fixed long word in comment from overflowing

--- a/Client/src/css/buildpage.css
+++ b/Client/src/css/buildpage.css
@@ -14,7 +14,7 @@
   margin: -74px 100px;
   box-shadow: inset 0 0 3em rgba(0, 0, 0, 0.1), 0 0 0 0px,
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
-  padding: 0px 26px 0px 0px;
+  padding: 0px 26px 20px 0px;
 }
 
 .buildpage-title {
@@ -48,7 +48,7 @@
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 0px 36px;
-  margin: -10px 20px 40px 50px;
+  margin: -40px 20px 40px 50px;
   padding: 20px 20px 20px 40px;
   font-size: 10px;
 }
@@ -182,7 +182,7 @@
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 0px 36px;
-  margin: -10px 20px 0px 50px;
+  margin: -10px 20px 0px -10px;
   padding: 20px 20px 20px 40px;
   font-size: 10px;
 }
@@ -303,6 +303,38 @@
   height: 0px;
 }
 
+.buildpage-description-container {
+  width: 44%;
+}
+.buildpage-description {
+  border: 0px solid;
+  border-radius: 10px;
+  width: 100%;
+  height: 210px;
+  overflow: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 0px 36px;
+  margin: -10px 20px 0px 50px;
+  font-size: 10px;
+  width: 100%;
+  padding: 12px 20px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  outline: none;
+  min-height: 200px;
+  resize: none;
+  font-family: "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  caret-color: transparent;
+}
+
 @media only screen and (max-width: 1560px) {
   .weapon-container {
     border: 0px solid;
@@ -316,7 +348,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 0px 36px;
-    margin: -10px 20px 40px 50px;
+    margin: -40px 20px 40px 50px;
     padding: 20px 20px 20px 40px;
     font-size: 10px;
   }
@@ -367,9 +399,40 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 0px 36px;
-    margin: -10px 20px 0px 50px;
+    margin: -10px 20px 0px -26px;
     padding: 20px 20px 20px 40px;
     font-size: 10px;
+  }
+  .buildpage-description-container {
+    width: 40%;
+  }
+  .buildpage-description {
+    border: 0px solid;
+    border-radius: 10px;
+    width: 100%;
+    height: 210px;
+    overflow: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 0px 36px;
+    margin: -10px 20px 0px 50px;
+    font-size: 10px;
+    width: 100%;
+    padding: 12px 20px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    outline: none;
+    min-height: 200px;
+    resize: none;
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+    caret-color: transparent;
   }
 }
 @media only screen and (max-width: 1130px) {
@@ -385,7 +448,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 0px 36px;
-    margin: -10px 20px 40px 50px;
+    margin: -40px 20px 40px 50px;
     padding: 20px 20px 20px 40px;
     font-size: 10px;
   }
@@ -438,6 +501,37 @@
     margin: -10px 20px 40px 50px;
     padding: 20px 20px 20px 40px;
     font-size: 10px;
+  }
+  .buildpage-description-container {
+    width: 78%;
+  }
+  .buildpage-description {
+    border: 0px solid;
+    border-radius: 10px;
+    width: 100%;
+    height: 210px;
+    overflow: auto;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 0px 36px;
+    margin: -10px 20px 0px 20px;
+    font-size: 10px;
+    width: 100%;
+    padding: 12px 20px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    outline: none;
+    min-height: 200px;
+    resize: none;
+    font-family: "Helvetica Neue", sans-serif;
+    font-size: 14px;
+    line-height: 1.5;
+    caret-color: transparent;
   }
 }
 
