--- a/Client/src/css/comment.css
+++ b/Client/src/css/comment.css
@@ -38,6 +38,7 @@
 }
 
 .comment {
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -47,13 +48,15 @@
   border-radius: 10px;
   margin-bottom: -25px;
   transform: translateY(10px);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .comment-username {
   font-size: 16px;
 }
 
 .comment-text {
-  margin: -30px 0px 0px 20px;
+  margin: -50px 0px 0px 20px;
   font-weight: 300;
   font-size: 14px;
 }
